# spraycc

./: .gitignore  Cargo.toml  LICENSE  README.md  spraycc.toml
src/: client.rs  config.rs  exec.rs  history.rs  ipc.rs  main.rs  server.rs  task.rs
