[package]
name = "spraycc"
version = "0.1.0"
authors = ["Jason McCampbell <jasonmccampbell@gmail.com>"]
edition = "2018"

[dependencies]
bincode = "1"
byteorder = "1"
bytes = "0.6"
clap = "2"
get_if_addrs = "0.5"
gethostname = "0"
home = "0.5"
lazy_static = "1"
serde = { version = "1", features = ["derive"] }
simple-process-stats = "0.2"
tempdir = "0.3"
# TODO: Reduce feature set
tokio = { version = "0.3", features = ["full"] }
toml = "0.5"
which = "2"
