[package]
name = "spraycc"
version = "0.1.0"
authors = ["Jason McCampbell <jasonmccampbell@gmail.com>"]
edition = "2018"

[dependencies]
bincode = "1"
byteorder = "1"
bytes = "^1"
clap = "2"
get_if_addrs = "0.5"
gethostname = "0"
home = "0.5"
lazy_static = "1"
serde = { version = "1", features = ["derive"] }
simple-process-stats = "^1"
tempdir = "0.3"
# TODO: Reduce feature set
tokio = { version = "^1.1", features = ["full"] }
toml = "0.5"
ubyte = { path = "../ubyte" }
which = "2"
