[package]
name = "spraycc"
version = "0.9.0"
authors = ["Jason McCampbell <jasonmccampbell@gmail.com>"]
edition = "2018"

[dependencies]
async-ctrlc = "^1.2"
bincode = "1"
byteorder = "1"
bytes = "^1"
clap = "2"
get_if_addrs = "0.5"
gethostname = "0"
home = "0.5"
lazy_static = "1"
priority-queue = "^1.1"
rand = "^0.8"
rlimit = "^0.5"
serde = { version = "^1", features = ["derive"] }
serde_json = "1"
simple-process-stats = "^1"
tempfile = "^3.2"
# TODO: Reduce feature set
tokio = { version = "^1.2", features = ["full"] }
toml = "0.5"
ubyte = "^0.10"
which = "2"
